1.5.0
* Client: support for Web Wallets (volatile wallets provided by the browser, not kept on the server)
* Client: Implemented BIP 130 - Direct headers announcement
* Qdb: added "volatile mode" in which records are being written to disk only when closing the database
* Client: "client -r" rebuilds UTXO database in a volatile mode (should be much faster) and exits
* Headers-first blockchain sync
* ripemd160 and snappy libs has been included in the sources (GitHub repo)

1.4.1
* WebUI: More of teal time UI refresh (without reloading the pages)
* secp256k1: Fixed issue #15 - BaseMultiply returning wrong result for certain input values

1.4.0 - 2015-11-09
* peersdb: MinPeersInDB changed from 256 to 512
* Client: Added BIP100 stats to the mining UI
* Wallet: Added support for Type-4 wallet, which is based on BIP-32 keys derivation (HD wallets)
* Lib: Some changes to btc.WalletHD API
* WebUI: Real time UI refresh (without reloading the pages)
* Client/WebUI: Fixed double bug that occurred when switching "Listening for incoming TCP connections" on/off
* secp256k1: Force Low S values in ECDSA Sign function
* OP_CHECKLOCKTIMEVERIFY - BIP65 integreated into blocks version 4

1.2.0 - 2015-07-31
* Lib: enforce blocks version 3, starting from #364000
* WebUI: LoadTx shows only own transactions
* WebUI: Fixed transaction upload form at the Home tab
* WebUI: Transactions tab has an option to only show "own" transactions
* WebUI: Miners tab shows fee statistics
* Fix: peers DB getting empty after disconnecting the network (keep at least 256 records)
* Fix: BlockChain.BlockIndexAccess wasn't being unlocked when a panic from FindPathTo() was handled
* Lib: reject old version blocks based on the super-majority principles
* Lib: implemented BIT-0066

1.1.0 - 2015-06-12
* Client: configuring "Walletdir" to allow improved privacy of the wallets
* Downloader: look for "Datadir" in "gocoin.conf" or "../client/gocoin.conf"