@@ -1,4 +1,5 @@
 1.5.0
+* Client: Additional mining statistics
 * Client: support for Web Wallets (volatile wallets provided by the browser, not kept on the server)
 * Client: Implemented BIP 130 - Direct headers announcement
 * Qdb: added "volatile mode" in which records are being written to disk only when closing the database
